# mpl-core-ops

./: Anchor.toml  README.md  package.json
programs/mpl-core-ops/: Cargo.toml
programs/mpl-core-ops/src/: lib.rs  types.rs
programs/mpl-core-ops/src/instructions/: burn_asset.rs  create_asset.rs  create_collection.rs  freeze_asset.rs  mod.rs  transfer_asset.rs
tests/: burn_asset.test.ts  create_asset.test.ts  create_collection.test.ts  freeze_asset.test.ts  helpers.ts  mpl-core-ops.ts
